MNPL-6 MNPL-20 | Add tokens authentication
* MNPL-6 | Implement tokens pair generator (access and refresh tokens)

* Refactor server configuration

* MNPL-20 | Implement global authentication by access token with demo getAuthenticatedUser() method

* MNPL-20 | Resolve merge conflicts
