# src/main/models/requests/RefreshTokensPairRequestDto.ts
@@ -1,0 +1,3 @@
+export default interface RefreshTokensPairRequestDto {
+  refreshToken: string;
+}
