# src/main/models/responses/TokensPairResponseDto.ts
@@ -1,0 +1,4 @@
+export default interface TokensPairResponseDto {
+  accessToken: string;
+  refreshToken: string;
+}
